GMSD-329: MEDIA - When hovering over the eye icon in the "Action" column, the tooltip displays "Update."

--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
@@ -95,10 +95,7 @@
                                 {
                                     <span class="m-2">|</span>
                                 }
-                                <a href="../MediaManager/GetMediaDetails?mediaId=@media.MediaId" title="Update" class="btn btn-sm btn-soft-warning btn-circle me-2">
-                                  <i class="fas fa-eye" style="color: orange;"></i>
-
-                                </a>
+                                <a href="../MediaManager/GetMediaDetails?mediaId=@media.MediaId" title="View" class="btn btn-sm btn-soft-warning btn-circle me-2"> <i class="fas fa-eye" style="color: orange;"></i></a>
                             </td>
                         </tr>
                     }
