--- a/Coditech.Project/Admin/Coditech.Admin/Views/Payment/PaymentGatewayDetails/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Payment/PaymentGatewayDetails/List.cshtml
@@ -14,7 +14,7 @@
                 <div class="card">
                     <div class="card-header">
                         <span class="card-title">Payment Gateway Details List</span>
-                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Payment Gateway Detail</a>
+                        @* <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Payment Gateway Detail</a> *@
 
                     </div>
                     <div class="card-header">
