--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaFileList.cshtml
@@ -35,14 +35,14 @@
                 <div class="align-items-center card-action-block d-flex flex-row-reverse justify-content-between mb-2">
                     @if (isDeleteAllowed)
                     {
-                        <a class="download-icon-link" data-media-id="@media.MediaId"
+                        <a title="Delete" class="download-icon-link" data-media-id="@media.MediaId"
                            onclick="openDeleteFileModal('@media.MediaId', '@Model.ActiveFolderId')">
                             <i class="dripicons-cross file-download-icon"></i>
                         </a>
                     }
                     @if (isDownloadAllowed)
                     {
-                        <a target="_blank" href="@media.DownloadPath" class="download-icon-link" download>
+                        <a target="_blank" href="@media.DownloadPath" title="Download" class="download-icon-link" download>
                             <i class="dripicons-download file-download-icon"></i>
                         </a>
                     }
