GMSD-339: DBTM - Activity Category" field behaves like a mandatory field but lacks an asterisk (*) indicator.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTestMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTestMaster/CreateEdit.cshtml
@@ -57,7 +57,8 @@
                                {
                                    DropdownType = DropdownTypeEnum.DBTMActivityCategory.ToString(),
                                    DropdownName = "DBTMActivityCategoryId",
-                                   DropdownSelectedValue = Model.DBTMActivityCategoryId.ToString()
+                                   DropdownSelectedValue = Model.DBTMActivityCategoryId.ToString(),
+                                   IsRequired = false
                                })
                                         @Html.ValidationMessageFor(x => x.DBTMActivityCategoryId, null)
                                     </div>
