--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMSubscriptionPlan/CreateEditDBTMSubscriptionPlan.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMSubscriptionPlan/CreateEditDBTMSubscriptionPlan.cshtml
@@ -38,8 +38,8 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.DBTMSubscriptionPlanId)
-                            <div class="row">                               
-                                <div class="col-lg-4">
+                                                        
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SubscriptionPlanTypeEnumId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
@@ -57,7 +57,8 @@
                                         }
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                            <div class="row">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PlanName, new { @class = "form-label required" })
                                         @if (Model.DBTMSubscriptionPlanId > 0)
@@ -71,7 +72,7 @@
                                         @Html.ValidationMessageFor(x => x.PlanName)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.DurationInDays, new { @class = "form-label required" })
                                         @if (Model.DBTMSubscriptionPlanId > 0)
@@ -85,18 +86,34 @@
                                         @Html.ValidationMessageFor(x => x.DurationInDays)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PlanCost, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.PlanCost, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
                                         @Html.ValidationMessageFor(x => x.PlanCost)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PlanDiscount, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.PlanDiscount, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
                                         @Html.ValidationMessageFor(x => x.PlanDiscount)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.IsTaxExclusive, new { @class = "form-label" })
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsTaxExclusive, new { @class = "form-check-input" })
+                                        </div>
                                     </div>
                                 </div>
                             </div>
