--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMSubscriptionPlan/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMSubscriptionPlan/_List.cshtml
@@ -25,7 +25,9 @@
                             <td>@item.SubscriptionPlanType</td>
                             <td>@item.DurationInDays</td>
                             <td>@AdminGeneralHelper.FormatPriceWithCurrency(@item.PlanCost)</td>
-                            <td>@AdminGeneralHelper.FormatPriceWithCurrency(@item.PlanDiscount)</td>                           
+                            <td>@AdminGeneralHelper.FormatPriceWithCurrency(@item.PlanDiscount)</td>
+                            <td>@Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)</td>
+                            <td>@Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsTaxExclusive)</td>
                             <td class="text-center data-action">
                                 <a href="../@controllerName/UpdateDBTMSubscriptionPlan?dBTMSubscriptionPlanId=@item.DBTMSubscriptionPlanId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
                                 @*  <a href="../@controllerName/Delete?dBTMSubscriptionPlanIds=@item.DBTMSubscriptionPlanId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a> *@
