--- a/Coditech.Project/Admin/Coditech.Admin/Views/Payment/PaymentGatewayDetails/CreateEditRazorpay.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Payment/PaymentGatewayDetails/CreateEditRazorpay.cshtml
@@ -37,6 +37,7 @@
                             @Html.HiddenFor(m => m.PaymentGatewayDetailId)
                             @Html.HiddenFor(m => m.CentreCode)
                             @Html.HiddenFor(m => m.IsLiveMode)
+                            @Html.HiddenFor(m => m.PaymentCode)
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="mb-3">
@@ -47,56 +48,26 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PaymentGatewayId, new { @class = "form-label required", @readonly = "readonly" })
+                                        @Html.LabelFor(x => x.PaymentGatewayId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", paymentGatewayDropdown)
                                         @Html.ValidationMessageFor(x => x.PaymentGatewayId)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.GatewayUsername, new { @class = "form-label " })
+                                        <label class="form-label required" for="GatewayUsername">Key Id</label>
                                         @Html.TextBoxFor(x => x.GatewayUsername, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.GatewayUsername)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.TransactionKey, new { @class = "form-label " })
+                                        <label class="form-label required" for="TransactionKey">Secret Key</label>
                                         @Html.TextBoxFor(x => x.TransactionKey, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.TransactionKey)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.GatewayPassword, new { @class = "form-label " })
-                                        @Html.TextBoxFor(x => x.GatewayPassword, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.GatewayPassword)
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.Custom1, new { @class = "form-label " })
-                                        @Html.TextBoxFor(x => x.Custom1, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.Custom1)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.Custom2, new { @class = "form-label " })
-                                        @Html.TextBoxFor(x => x.Custom2, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.Custom2)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.Custom3, new { @class = "form-label " })
-                                        @Html.TextBoxFor(x => x.Custom3, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.Custom3)
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.IsAutoCaptured, new { @class = "form-label" })
                                         <div class="form-check">
