--- a/Coditech.Project/Admin/Coditech.Admin/Views/Payment/PaymentGatewayDetails/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Payment/PaymentGatewayDetails/_List.cshtml
@@ -13,7 +13,6 @@
         <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
             <tbody>
-                
                 @if (Model?.PaymentGatewayDetailsList?.Count > 0)
                 {
                     foreach (var item in Model?.PaymentGatewayDetailsList)
@@ -29,11 +28,10 @@
                                 }
                                 else
                                 {
-                                    <a href="../@controllerName/Create?centreCode=@Model.SelectedCentreCode&paymentGatewayId=@Model.SelectedParameter1&isLiveMode=@item.IsLiveMode" title="Create" class="btn btn-sm btn-soft-success btn-circle me-2">
+                                    <a href="../@controllerName/Create?centreCode=@Model.SelectedCentreCode&paymentGatewayId=@Model.SelectedParameter1&isLiveMode=@item.IsLiveMode&paymentCode=@item.PaymentCode" title="Create" class="btn btn-sm btn-soft-success btn-circle me-2">
                                         <i class="fas fa-plus"></i>
                                     </a>
                                 }
-
                             </td>
                         </tr>
                     }
@@ -42,4 +40,3 @@
         </table>
     </div>
 </div>
-@Html.Partial("~/Views/Shared/Datatable/_DatatablePagination.cshtml", Model.PageListViewModel)
