--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLSetupNarration/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLSetupNarration/_List.cshtml
@@ -4,10 +4,10 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
-<div class="row">
-    @Html.Partial("~/Views/Shared/Datatable/_DatatableShowResult.cshtml", Model.PageListViewModel.RecordPerPage)
-    @Html.Partial("~/Views/Shared/Datatable/_DatatableSearchData.cshtml", Model.PageListViewModel.SearchBy)
-</div>
+@* <div class="row"> *@
+@*     @Html.Partial("~/Views/Shared/Datatable/_DatatableShowResult.cshtml", Model.PageListViewModel.RecordPerPage) *@
+@*     @Html.Partial("~/Views/Shared/Datatable/_DatatableSearchData.cshtml", Model.PageListViewModel.SearchBy) *@
+@* </div> *@
 <div class="row">
     <div class="col-sm-12 table-responsive">
         <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
@@ -18,15 +18,20 @@
                     foreach (var item in Model?.AccGLSetupNarrationList)
                     {
                         <tr>
-                            <td>@item.AccGLSetupNarrationId</td>
                             <td>@item.NarrationType</td>
-                            <td>@item.NarrationDescription</td>
-                            <td class="text-center">
-                                @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
-                            </td>
-                            <td class="text-center">
-                                <a href="../@controllerName/Edit?accGLSetupNarrationId=@item.AccGLSetupNarrationId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
-                                @* <a href="../@controllerName/Delete?accGLSetupNarrationId=@item.AccGLSetupNarrationId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a> *@
+                            <td class="text-center data-action">
+                                @if (item.AccGLSetupNarrationId > 0)
+                                {
+                                    <a href="../@controllerName/Edit?accGLSetupNarrationId=@item.AccGLSetupNarrationId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2">
+                                        <i class="fas fa-edit"></i>
+                                    </a>
+                                }
+                                else
+                                {
+                                    <a href="../@controllerName/Create?centreCode=@Model.SelectedCentreCode" title="Create" class="btn btn-sm btn-soft-success btn-circle me-2">
+                                        <i class="fas fa-plus"></i>
+                                    </a>
+                                }
                             </td>
                         </tr>
                     }
@@ -35,4 +40,4 @@
         </table>
     </div>
 </div>
-@Html.Partial("~/Views/Shared/Datatable/_DatatablePagination.cshtml", Model.PageListViewModel)
+
