--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeDetails/UpdateDBTMTraineeOtherDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeDetails/UpdateDBTMTraineeOtherDetails.cshtml
@@ -60,6 +60,20 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="mb-3">
+                                        @Html.LabelFor(x => x.Height, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.Height, new { @class = "form-control", onkeypress = "return CoditechCommon.ValidNumeric()", @min = "1" })
+                                        @Html.ValidationMessageFor(x => x.Height)
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.Weight, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.Weight, new { @class = "form-control", onkeypress = "return CoditechCommon.ValidDecimalNumeric()", @min = "1" })
+                                        @Html.ValidationMessageFor(x => x.Weight)
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.MedicalHistory, new { @class = "form-label" })
                                         @Html.TextAreaFor(x => x.MedicalHistory, new { @class = "form-control", @maxlength = "500" })
                                         @Html.ValidationMessageFor(x => x.MedicalHistory)
