--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLSetupNarration/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLSetupNarration/List.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Account Narration List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.GetDepartmentByCentreCode()" };
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.LoadListByCentreCodeAndDepartmentId('" + @controllerName + "','" + @actionName + "')" };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -12,9 +12,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <span class="card-title">Account Narration List</span>
-                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Account Narration</a>
-                        
+                        <span class="card-title">Account Narration List</span>                        
                     </div>
                     <div class="card-header">
                         <div class="row">
@@ -23,9 +21,6 @@
                             </div>
                             <div class="col-md-4">
                                 @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
-                            </div>
-                            <div class="col-md-1">
-                                <label>@AdminResources.LabelPaymentGateway</label>
                             </div>
                             <div class="col-md-1">
                                 <input type="button" class="btn btn-success" value="Show" id="ShowDataId" onclick="CoditechCommon.LoadListByCentreCodeAndDepartmentId('@controllerName','@actionName')" />
