--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeDetails/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeDetails/_List.cshtml
@@ -41,6 +41,7 @@
                             <td>@item.LastName</td>
                             <td>@item.MobileNumber</td>
                             <td>@item.EmailId</td>
+                            <td>@item.NumberOfActivityPerformed</td>
 
                             <td>
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
