Code Correction For Media

--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaDetails.cshtml
@@ -66,7 +66,7 @@
                                     <label class="btn btn-sm btn-soft-primary" for="imageUpload">
                                         <i class="fas fa-upload me-2"></i>Upload File
                                     </label>
-                                    <input type="file" id="imageUpload" name="imageFile" style="display: none;" onchange="this.form.submit()" />
+                                    <input type="file" id="imageUpload" name="imageFile" style="display: none;" onchange="this.form.submit(); CoditechCommon.ShowLodder();" />
                                     <input type="hidden" name="folderId" value="@Model.ActiveFolderId" />
                                 </form>
                             }
