--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
@@ -35,14 +35,14 @@
     <div class="col-lg-3">
         <div class="mb-3">
             @Html.LabelFor(x => x.MiddleName, new { @class = "form-label" })
-            @Html.TextBoxFor(x => x.MiddleName, new { @class = "form-control",@onkeypress = "return CoditechCommon.AllowOnlyAlphabetWithouSpacing()" })
+            @Html.TextBoxFor(x => x.MiddleName, new { @class = "form-control", @onkeypress = "return CoditechCommon.AllowOnlyAlphabetWithouSpacing()" })
             @Html.ValidationMessageFor(x => x.MiddleName)
         </div>
     </div>
     <div class="col-lg-3">
         <div class="mb-3">
             @Html.LabelFor(x => x.LastName, new { @class = "form-label required" })
-            @Html.TextBoxFor(x => x.LastName, new { @class = "form-control",@onkeypress = "return CoditechCommon.AllowOnlyAlphabetWithouSpacing()" })
+            @Html.TextBoxFor(x => x.LastName, new { @class = "form-control", @onkeypress = "return CoditechCommon.AllowOnlyAlphabetWithouSpacing()" })
             @Html.ValidationMessageFor(x => x.LastName)
         </div>
     </div>
@@ -210,7 +210,6 @@
             @Html.ValidationMessageFor(x => x.GeneralOccupationMasterId)
         </div>
     </div>
-
     <div class="col-lg-3">
         <div class="mb-3">
             @Html.LabelFor(x => x.PhotoMediaId, new { @class = "form-label" })
@@ -227,7 +226,6 @@
     $(document).ready(function () {
 
         var photoMediaPath = $('#PhotoMediaPath').val();
-
         if (!(photoMediaPath === '' || photoMediaPath === null)) {
             $('#imagePreview').attr('src', $('#PhotoMediaPath').val()).show();
         }
@@ -235,6 +233,7 @@
         $('#imageUpload').change(function () {
             var formData = new FormData();
             var fileInput = $('#imageUpload')[0];
+            $("#notificationDivId").hide();
             if (fileInput.files.length > 0) {
                 CoditechCommon.ShowLodder();
                 formData.append('files', fileInput.files[0]);
@@ -245,8 +244,13 @@
                     processData: false,
                     contentType: false,
                     success: function (response) {
-                        $('#imagePreview').attr('src', response.imageUrl).show();
-                        $('input[name="PhotoMediaId"]').val(response.photoMediaId);
+                        if(response.status == true||response.status == "true"){
+                            $('#imagePreview').attr('src', response.imageUrl).show();
+                            $('input[name="PhotoMediaId"]').val(response.photoMediaId);
+                        }
+                        else {
+                            CoditechNotification.DisplayNotificationMessage(response.message, "error")
+                        }
                         CoditechCommon.HideLodder();
                     },
                     error: function (jqXHR, textStatus, errorThrown) {
