--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMActivities/TraineeActivitiesDetails_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMActivities/TraineeActivitiesDetails_List.cshtml
@@ -1,6 +1,6 @@
-﻿@model DBTMActivitiesListViewModel
+﻿@model DBTMActivitiesDetailsListViewModel
 @{
-    ViewBag.Title = "Activities List";
+    ViewBag.Title = "Activities Details";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
@@ -11,15 +11,11 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <span class="card-title">Activities List : @Model.FirstName @Model.LastName</span>
-                            <a class=" btn btn-sm btn-soft-secondary float-end" href="/dashboard/index" role="button">
-                                <i class="fas fa-arrow-left me-2"></i>Back
-                            </a>
-                        
+                        <span class="card-title">Activities Details List : @Model.FirstName @Model.LastName</span>
                     </div>
                     <div class="card-body">
                         <div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
-                            @Html.Partial("~/Views/DBTM/DBTMActivities/_List.cshtml", Model)
+                            @Html.Partial("~/Views/DBTM/DBTMActivities/DBTMActivitiesDetails_List.cshtml", Model)
                         </div>
                     </div>
                 </div>
