--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMActivities/TraineeActivitiesDetails_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMActivities/TraineeActivitiesDetails_List.cshtml
@@ -1,26 +1,60 @@
 ﻿@model DBTMActivitiesDetailsListViewModel
 @{
-    ViewBag.Title = "Activities Details";
+    Layout = null;
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+    string css = "";
 }
-<!-- Page Content-->
-<div class="page-content mt-5">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header">
-                        <span class="card-title">Activities Details List : @Model.FirstName @Model.LastName</span>
-                    </div>
-                    <div class="card-body">
-                        <div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
-                            @Html.Partial("~/Views/DBTM/DBTMActivities/DBTMActivitiesDetails_List.cshtml", Model)
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
+<div class="row">
+    @Html.Partial("~/Views/Shared/Datatable/_DatatableShowResult.cshtml", Model.PageListViewModel.RecordPerPage)
+    @Html.Partial("~/Views/Shared/Datatable/_DatatableSearchData.cshtml", Model.PageListViewModel.SearchBy)
+</div>
+
+
+<div class="row">
+    <div class="col-sm-12 table-responsive">
+        <table id="datatable" class="action-set table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
+            @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
+            <tbody>
+                @if (Model?.ActivitiesDetailsList?.Count > 0)
+                {
+                    foreach (var item in Model?.ActivitiesDetailsList)
+                    {
+                        <tr>
+                            @foreach (var item1 in Model.Columns)
+                            {
+                                if (item1 == "Time")
+                                {
+                                    <td>@item.Time</td>
+                                    break;
+                                }
+                                else if (item1 == "Distance")
+                                {
+                                    <td>@item.Distance</td>
+                                    break;
+                                }
+                                else if (item1 == "Force")
+                                {
+                                    <td>@item.Force</td>
+                                    break;
+                                }
+                                else if (item1 == "Acceleration")
+                                {
+                                    <td>@item.Acceleration</td>
+                                    break;
+                                }
+                                else if (item1 == "Angle")
+                                {
+                                    <td>@item.Angle</td>
+                                    break;
+                                }
+                            }
+                        </tr>
+                    }
+                }
+            </tbody>
+        </table>
     </div>
 </div>
-<!-- end page content -->
+
